--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: Robert de Bock
+  author: Ahmad Haghighi
   role_name: bootstrap
-  description: Prepare your system to be managed by Ansible.
+  description: Prepare your system to be managed by Ansible. (Upstream:robertdebock.bootstrap)
   license: Apache-2.0
   company: none
   min_ansible_version: 2.6
