--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -47,9 +47,9 @@ platforms:
     pre_build_image: yes
     registry:
       url: registry.access.redhat.com
-      credentials:
-        username: $registryredhatiousername
-        password: $registryredhatiopassword
+      # credentials:
+      #   username: $registryredhatiousername
+      #   password: $registryredhatiopassword
   - name: bootstrap-rhel-latest
     image: ubi8/ubi
     pre_build_image: yes
